Refactored and add Night/Day themes. Updated app icon.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 fastlane/metadata
 fastlane/screenshots
 Pods
-.*json
-Google.*
+SimpleWeather!/GoogleService-Info.plist
+SimpleWeather!/simpleweather-b995e-firebase-adminsdk-5ctb5-4d3889b06a.json
