Fixed UI bug and bumped version number

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ fastlane/screenshots
 Pods
 SimpleWeather!/GoogleService-Info.plist
 SimpleWeather!/simpleweather-b995e-firebase-adminsdk-5ctb5-4d3889b06a.json
+*.zip
+*.ipa
